--- a/index.html
+++ b/index.html
@@ -91,7 +91,8 @@
       <div id="algorithmDescriptor">Pick an algorithm and visualize it!</div>
       <table id='board'/>
     </div>
-    <p> Developed by Sudhanshu. Reference -> Clément Mihailescu's "Pathfinder Visualisation Project". </p>
+    <p> Developed by Sudhanshu.</p>
+    <p> Reference - Clément Mihailescu's "Pathfinder Visualisation" Project. </p>
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
